--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "frame-picker"
 version = "0.1.0"
+authors = ["Hugo <cumt_zhangyong@163.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[package.metadata]
+license = "MIT"
+repository = "https://github.com/cumthugo/frame-picker.git"
